@@ -27,7 +27,10 @@
 set -e
 
 aclocal -I m4
-libtoolize --automake
+# Mac OS X: Use glibtoolize instead
+(glibtoolize --version) < /dev/null > /dev/null 2>&1 && LIBTOOLIZE=glibtoolize |
+| LIBTOOLIZE=libtoolize
+$LIBTOOLIZE --automake
 autoheader
 automake --add-missing
 autoconf
